# jpipe-runner

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.md  action.yml  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflow/: runner.yml
.github/workflows/: demo-poetry.yml  demo-vanilla.yml  runner.yml
examples/: 01_slides.jd  02_quality_full.jd  04_pattern.jd  README.md
examples/libraries/: notebook.py  slides.py
examples/models/: 01_slides.json  03_quality_compo.jd
jpipe_runner/: definitions.py  enums.py  exceptions.py  jpipe.lark  jpipe.py  models.py  parser.py  runner.py  runtime.py  transformer.py  utils.py
jpipe_runner/grammars/: jpipe.lark
mermaid/: README.md  architecture.mmd
