[tool.poetry]
name = "jpipe-runner"
version = "0.0.1"
description = "A Justification Runner designed for jPipe."
authors = ["Jason Lyu <xjasonlyu@gmail.com>", "Sébastien Mosser <mossers@mcmaster.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
lark = "^1.2.2"
networkx = "^3.4.2"
termcolor = "^2.5.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
